# flipperflipper

./: .env.example  .env.production  .gitignore  .replit  10K_HOUR_VALIDATION_PROTOCOL.md  =1.2.0  ADVANCED_FIX_ORGANIZATION.md  AI_DEVELOPER_PROMPT_FUNCTIONAL_ELITE.md  AI_DISASTER_PARANOID_VALIDATION.md  AI_FIX_AND_ANALYZE_PROMPT.md  AUDIT_RESULTS.json  AUDIT_SUMMARY.txt  AUDIT_TO_FIX_MAPPING.md  AUDIT_VALIDATION_COMPLETE.md  CLAUDE_AI_HANDOFF_PROMPT.md  CODE_SOPHISTICATION_ANALYSIS.md  CODE_STATUS_REPORT.md  COMMANDS.md  COMMON_IMPLEMENTATION_FAILURES.md  COMPLETE_AUDIT_SUMMARY.md  COMPLETE_PACKAGE_README.md  COMPLETE_SOLUTION_SUMMARY.md  COMPLETE_SYSTEM_TEST.py  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_COVERAGE_ANALYSIS.md  COMPREHENSIVE_E2E_TEST.py  COMPREHENSIVE_STATUS_FINAL.md  CREDENTIALS_SETUP.md  CRITICAL_REMAINING_ANALYSIS.md  CUPIDBOT_OFM_SETUP.md  CURRENT_STATUS_AND_ROADMAP.md  CURSOR_CLAUDE_SMART_VALIDATION.md  DASHBOARD_100_VERIFIED.md  DASHBOARD_AUDIT.md  DASHBOARD_COMPLETE.txt  DEBUG_SOCKET_STATE.py  DEEP_PHASE1_VALIDATOR.py  DEEP_SYSTEM_AUDIT.py  DEEP_VALIDATION_TEST.py  DEPLOYMENT.md  (+243 more)
.backup_1760821534/: .env.example  CLI_VS_WEB_COMPARISON.md  FINAL_ASSESSMENT.md  FINAL_HONEST_STATUS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SOLUTION_SUMMARY.md  FINAL_USER_TEST.py  MULTI_USER.md  PAYLOAD_GENERATION_ANALYSIS.md  START_SYSTEM.py  aggressive_fix_all.py  backup_utils.py  complete_integration_test.py  comprehensive_audit_report.json  comprehensive_codebase_audit.py  comprehensive_fix_plan.py  create_working_payload.py  create_working_system.py  debug_api_issues.py  deep_code_audit.py  deep_integration_research.py  documented_todos.json  final_validation_results.json  fix_connection_research.py  fix_critical_issues.py  fix_execution_report.json  fixed_payload_generator.py  fixed_protocol.py  gap_analysis_report.json  main.py  mobile_ui_fixes.txt  phase3_fix_protocol.py  (+17 more)
native_payloads/: CMakeLists.txt  build.sh  build_trusted_windows.sh  test_binary
native_payloads/core/: commands.c  commands.h  config.h  evasion.c  evasion.h  main.c  main_improved.c  utils.c  utils.h
native_payloads/crypto/: aes.c  aes.h  sha256.c  sha256.h
native_payloads/evasion/: process_ghost  process_ghost.c
native_payloads/exfil/: dns_tunnel  dns_tunnel.c
native_payloads/harvest/: cred_harvester  cred_harvester.c
native_payloads/inject/: inject_core.c  inject_core.h  inject_linux.c  inject_linux.h  inject_windows.c  inject_windows.h
native_payloads/linux/: linux_impl.c
native_payloads/network/: protocol.c  protocol.h
native_payloads/output/: payload  payload_minimal  payload_native  test_stealth
native_payloads/rootkit/: Makefile  stitch_control  stitch_control.c  stitch_rootkit.c
native_payloads/tests/: test_stealth.c
native_payloads/windows/: manifest.xml  resource.rc  winapi.c
(+497 files in other folders)
